force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/cgcloud__Week_Day_Share_Profile__c.object-meta.xml
<CustomObject>
    <description>Contains statistical profiles how weekly data is distributed between different days of a week.</description>
    <label>Week Day Share Profile</label>
    <nameField>
        <displayFormat>WDSP-{0000000}</displayFormat>
        <label>Week Day Share Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Week Day Share Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>