force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/fields/cgcloud__Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_3__c</fullName>
    <label>Description Language 3</label>
    <type>TextArea</type>
</CustomField>