force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/fields/cgcloud__Friday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Friday__c</fullName>
    <description>Input value for the share valid for fridays</description>
    <label>Friday (Value)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>