force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/fields/cgcloud__Saturday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Saturday__c</fullName>
    <description>Input value for the share valid for saturdays</description>
    <label>Saturday (Value)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>