force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/fields/cgcloud__Sunday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sunday__c</fullName>
    <description>Input value for the share valid for sundays</description>
    <label>Sunday (Value)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>