force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/fields/cgcloud__Thursday_Percentage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Thursday_Percentage__c</fullName>
    <description>Utilized share value for thursdays as %</description>
    <formula>cgcloud__Thursday__c / cgcloud__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>