force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/fields/cgcloud__Total__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total__c</fullName>
    <description>Total of Input Values in the current profile</description>
    <formula>cgcloud__Sunday__c + cgcloud__Monday__c + cgcloud__Tuesday__c + cgcloud__Wednesday__c + cgcloud__Thursday__c + cgcloud__Friday__c + cgcloud__Saturday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>