force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/fields/cgcloud__Tuesday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tuesday__c</fullName>
    <description>Input value for the share valid for tuesdays</description>
    <label>Tuesday (Value)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>