force-app/main/default/objects/cgcloud__Week_Day_Share_Profile__c/validationRules/cgcloud__At_least_one_value_must_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__At_least_one_value_must_be_entered</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Total__c = 0</errorConditionFormula>
    <errorMessage>At least one Week Day value must be greater than zero.</errorMessage>
</ValidationRule>